<?xml version="1.0" encoding="UTF-8"?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at
  http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
      <groupId>org.apache</groupId>
      <artifactId>apache</artifactId>
      <version>20</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.apache.flink</groupId>
    <artifactId>flink-kubernetes-operator-parent</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Flink Kubernetes: </name>
    <packaging>pom</packaging>
    <url>https://flink.apache.org</url>
    <inceptionYear>2014</inceptionYear>

    <licenses>
      <license>
        <name>The Apache Software License, Version 2.0</name>
        <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        <distribution>repo</distribution>
      </license>
    </licenses>

    <modules>
      <module>flink-kubernetes-operator</module>
      <module>flink-kubernetes-webhook</module>
    </modules>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>

        <operator.sdk.version>2.1.1</operator.sdk.version>
        <fabric8.version>5.12.1</fabric8.version>
        <lombok.version>1.18.22</lombok.version>

        <scala.version>2.12</scala.version>
        <flink.version>1.14.3</flink.version>
        <flink.shaded.version>15.0</flink.shaded.version>

        <slf4j.version>1.7.36</slf4j.version>
        <log4j.version>2.17.1</log4j.version>

        <spotless.version>2.4.2</spotless.version>
        <it.skip>true</it.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Logging -->

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <configuration>
                    <skipITs>${it.skip}</skipITs>
                    <includes>
                        <include>**/*ITCase.*</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <!-- Note: match version with docs/flinkDev/ide_setup.md -->
                        <version>8.14</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <suppressionsLocation>/tools/maven/suppressions.xml</suppressionsLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <configLocation>/tools/maven/checkstyle.xml</configLocation>
                    <logViolationsToConsole>true</logViolationsToConsole>
                    <failOnViolation>true</failOnViolation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>1.7</version>
                            <style>AOSP</style>
                        </googleJavaFormat>

                        <!-- \# refers to the static imports -->
                        <importOrder>
                            <order>org.apache.flink,org.apache.flink.shaded,,javax,java,scala,\#</order>
                        </importOrder>

                        <removeUnusedImports />
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                    <groupId>org.apache.rat</groupId>
                    <artifactId>apache-rat-plugin</artifactId>
                    <version>0.12</version><!--$NO-MVN-MAN-VER$-->
                    <inherited>false</inherited>
                    <executions>
                        <execution>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludeSubProjects>false</excludeSubProjects>
                        <numUnapprovedLicenses>0</numUnapprovedLicenses>
                        <licenses>
                            <!-- Enforce this license:
                                Licensed to the Apache Software Foundation (ASF) under one
                                or more contributor license agreements.  See the NOTICE file
                                distributed with this work for additional information
                                regarding copyright ownership.  The ASF licenses this file
                                to you under the Apache License, Version 2.0 (the
                                "License"); you may not use this file except in compliance
                                with the License.  You may obtain a copy of the License at
                                  http://www.apache.org/licenses/LICENSE-2.0
                                Unless required by applicable law or agreed to in writing,
                                software distributed under the License is distributed on an
                                "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
                                KIND, either express or implied.  See the License for the
                                specific language governing permissions and limitations
                                under the License.
                            -->
                            <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
                                <licenseFamilyCategory>AL2 </licenseFamilyCategory>
                                <licenseFamilyName>Apache License 2.0</licenseFamilyName>
                                <notes />
                                <patterns>
                                    <pattern>Licensed to the Apache Software Foundation (ASF) under one</pattern>
                                </patterns>
                            </license>
                        </licenses>
                        <licenseFamilies>
                            <licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
                                <familyName>Apache License 2.0</familyName>
                            </licenseFamily>
                        </licenseFamilies>
                        <excludes>
                            <!-- Additional files like .gitignore etc.-->
                            <exclude>**/.*/**</exclude>
                            <exclude>**/*.prefs</exclude>
                            <exclude>**/*.log</exclude>
                            <exclude>**/dependency-reduced-pom.xml</exclude>
                            <!-- Administrative files in the main trunk. -->
                            <exclude>**/README.md</exclude>
                            <exclude>.github/**</exclude>
                            <!-- Build files -->
                            <exclude>**/*.iml</exclude>
                            <!-- Generated content -->
                            <exclude>**/target/**</exclude>
                            <exclude>apache-maven-3.2.5/**</exclude>
                            <!-- PyCharm -->
                            <exclude>**/.idea/**</exclude>
                            <!-- Generated CRD -->
                            <exclude>helm/flink-operator/crds/flinkdeployments.flink.apache.org-v1.yml</exclude>
                            <exclude>rio.yml</exclude>
                        </excludes>
                    </configuration>
                </plugin>
        </plugins>
    </build>

</project>
